Dev: Report generation

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@400;700&family=Nunito:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <title>RecyGlo Platform</title>
+     <script type="module">
+      // Import the Buffer class from the 'buffer' package
+      import { Buffer } from "buffer/";
+      
+      // Make it available globally for all scripts and libraries
+      window.Buffer = Buffer;
+    </script>
   </head>
   <body>
     <div id="root"></div>
